--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "eslintConfig": {
+    "extends": "preact"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "eslint-plugin-react-redux": "^4.0.0",
     "preact": "^10.10.6",
     "react-redux": "^8.0.4",
     "sass": "^1.55.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "vite": "^3.1.0"
   }
 }
