--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,16 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb", "plugin:react-redux/recommended", "prettier"],
+  "extends": ["airbnb", "prettier"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react-redux"],
+  "plugins": [],
   "rules": {
     "no-plusplus": "off",
+    "react/react-in-jsx-scope": "off",
     "no-param-reassign": [
       "error",
       {
